--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ body {
     flex-grow: 1;
     justify-content: center;
     align-items: center;
-    /* gap: 200px; */
     flex-wrap: wrap;
+    margin-top: 100px;
 }
 
 .img img {
@@ -55,12 +55,23 @@ a {
 }
 
 .info button {
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 9px 16px;
     font-weight: bold;
     border-radius: 7px;
+    color: #f9faf8;
+    background-color: #1f2937;
+    border: none;
 }
 
 button:hover {
     cursor: pointer;
+    border: none;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
 }
